--- a/mystyle.css
+++ b/mystyle.css
@@ -1,61 +1,66 @@
 body {
 	background-color:#F2C6B6;
-}
-h1
-{
-    color:#5b66a6;
-    text-align:center;
-    font-family: : Impact, Charcoal, sans-serif;
     
 }
+
+header
+{
+    color:#5b66a6;
+    font-size: 40px;
+    text-align:center;
+    padding: 10px;
+    margin:20px 0;
+
+
+}
+nav a{
+    font: myfirstfont;
+    background: #F2C6B6;
+    padding: 3px 9px;
+    color: #f25c05;
+}
+nav {
+  text-align: center;
+  margin: 20px 0;
+  padding: 10px;
+}
+
+nav a:hover {
+    background-color: #bebdbf;
+}
+
 p
 {
     font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size:20px;
+    margin: 0 auto;
+    width: 400px;
+    background: #cddef2;
+    padding: 20px;
+    color: white;
 
 }
+
+
+img .pic{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 50%;
+}
+
+
 .div1{
-	width: 600px;
+	width: 800px;
     height: 300px;
     position:relative;
     left: 300px;
-    background: #f1c6b6;
+    background: #cddef2;
     text-align: center;
     box-sizing: border-box; 
 
 }
-ul {
-    list-style-type: none;
-    margin: 10;
-    padding: 10;
-    overflow: hidden;
-    background-color: #F2C6B6;
-    font: Impact, Charcoal, sans-serif;
-}
- 
-li {
-    float: left;
-}
- 
-li a {
-    display: block;
-    color: #f25c05;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-li a #home{
-	color: #1e1b8c;
-}
+
  
 /*鼠标移动到选项上修改背景颜色 */
-li a:hover {
-    background-color: #bebdbf;
-}
 
-img {
-    display: block;
-    margin: auto;
-    width: 10%;
- 
-}
